# PDF2PPT

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  README_EN.md  conftest.py  docker-compose.dev.yml  docker-compose.docs.yml  docker-compose.hosted.yml  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json  pyrightconfig.json
.github/workflows/: deploy-docs.yml
api/: .dockerignore  Dockerfile  pyrightconfig.json  requirements.txt
api/app/: __init__.py  api_auth.py  auth.py  config.py  database.py  dependencies.py  job_options.py  job_paths.py  logging_config.py  main.py  worker.py
api/scripts/: benchmark_engines.py  benchmark_linebreak.py  compare_layout.py  dump_ir.py  inspect_pptx.py  run_api.sh  run_cleanup.py  run_hosted.sh  run_worker.sh
api/tests/: test_ai_ocr_check_route_integration.py  test_ai_ocr_client_routes.py  test_ai_ocr_local_layout_route.py  (+19 more)
docs/: Dockerfile  index.md  linuxdo-post.md  mcp-server-prd.md  nginx.conf
ocr_pdf2ppt_v2/: .env.example  README.md  pyproject.toml
ocr_pdf2ppt_v2/src/ocr_pdf2ppt_v2/: __init__.py  api.py  cli.py  config.py  geometry.py  models.py  page_cleaner.py  pdf_renderer.py  pipeline.py  ppt_builder.py  siliconflow_ocr.py
ocr_pdf2ppt_v2/tests/: test_geometry.py  test_page_cleaner.py  test_pipeline.py
ocr_pdf2ppt_v3/: .env.example  README.md  pyproject.toml
ocr_pdf2ppt_v3/src/ocr_pdf2ppt_v3/: __init__.py  api.py  cli.py  config.py  geometry.py  models.py  paddle_doc_parser_ocr.py  page_cleaner.py  pdf_renderer.py  pipeline.py  ppt_builder.py  quality_gate.py  siliconflow_ocr.py
ocr_pdf2ppt_v3/tests/: test_quality_gate.py  test_v3_geometry.py  test_v3_page_cleaner.py  test_v3_pipeline.py
web/: .dockerignore  package-lock.json  package.json
(+102 files in other folders)
